--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@martyganz/mat-file-upload": "^12.0.0-beta1",
     "@types/crypto-js": "^4.0.2",
     "crypto-js": "^4.0.0",
+    "requirejs": "^2.3.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
