--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aeschat",
   "version": "0.0.0",
   "scripts": {
+    "ng-high-memory": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
