--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "./node_modules/crypto-js/crypto-js.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
