--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "requirejs": "^2.3.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "typescript-map": "^0.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
