--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@martyganz/mat-file-upload": "^12.0.0-beta1",
     "requirejs": "^2.3.6",
     "rxjs": "~6.6.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/core": "^12.1.1",
     "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.1",
+    "@angular/pwa": "^12.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
