--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng-high-memory": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng",
     "ng": "ng",
-    "deploy": "ng deploy --no-silent --cname='cnmqq.ml' --name='wetabq' --email='wetabq@gmail.com'",
+    "deploy": "ng deploy --no-silent --cname='aes.fecraft.cn' --name='wetabq' --email='wetabq@gmail.com'",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
