--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
-    "@angular-devkit/core": "^12.1.1",
+    "@angular-devkit/core": "^12.1.4",
     "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/pwa": "^12.1.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.18",
+    "@types/jasmine": "^3.8.2",
+    "@types/node": "^16.4.11",
     "angular-cli-ghpages": "^1.0.0-rc.2",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "^3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
-    "typescript": "~4.3.2"
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "typescript": "~4.3.2",
+    "uuid": "^8.3.2"
   }
 }
