--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build
+name: Build and Deploy Github Pages
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,10 +21,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node 12.x
-        uses: actions/setup-node@v1
+      - name: Use Node 12.22.4
+        uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: "12.22.4"
       - name: Cache node modules
         uses: actions/cache@v2
         env:
@@ -40,9 +40,13 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Deploy to github pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run deploy
       - name: Archive build
         if: success()
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: deploy_dist
           path: dist
