--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "typescript": "~4.3.5",
-    "uuid": "^8.3.2"
+    "typescript": "~4.3.5"
   }
 }
