--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,10 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies
         run: npm ci
-      - name: Build
-        run: npm run build
+      - name: Build time
+        run: date "+%F %r %Z" > src/buildtime.txt && cat src/buildtime.txt
+      # - name: Build
+      #   run: npm run build
       - name: Deploy to github pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
