--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
     "requirejs": "^2.3.6",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.3.0",
     "tslib": "^2.3.0",
     "typescript-map": "^0.1.0",
     "zone.js": "~0.11.4"
