--- a/package.json
+++ b/package.json
@@ -12,38 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@angular/service-worker": "~12.2.0",
+    "@angular/animations": "~12.2.7",
+    "@angular/cdk": "^12.2.7",
+    "@angular/common": "~12.2.7",
+    "@angular/compiler": "~12.2.7",
+    "@angular/core": "~12.2.7",
+    "@angular/forms": "~12.2.7",
+    "@angular/material": "^12.2.7",
+    "@angular/platform-browser": "~12.2.7",
+    "@angular/platform-browser-dynamic": "~12.2.7",
+    "@angular/router": "~12.2.7",
+    "@angular/service-worker": "~12.2.7",
     "requirejs": "^2.3.6",
     "rxjs": "^7.3.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "typescript-map": "^0.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-devkit/core": "^12.2.0",
-    "@angular/cli": "^12.2.0",
-    "@angular/compiler-cli": "~12.2.0",
-    "@angular/pwa": "^12.2.0",
-    "@types/jasmine": "^3.8.2",
-    "@types/node": "^16.4.13",
+    "@angular-devkit/build-angular": "~12.2.7",
+    "@angular-devkit/core": "^12.2.7",
+    "@angular/cli": "^12.2.7",
+    "@angular/compiler-cli": "~12.2.7",
+    "@angular/pwa": "^12.2.7",
+    "@types/jasmine": "^3.9.1",
+    "@types/node": "^16.10.1",
     "angular-cli-ghpages": "^1.0.0-rc.2",
-    "jasmine-core": "^3.8.0",
+    "jasmine-core": "^3.9.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.4.3"
   }
 }
