--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.7",
-    "@angular/cdk": "^12.2.7",
-    "@angular/common": "~12.2.7",
-    "@angular/compiler": "~12.2.7",
-    "@angular/core": "~12.2.7",
-    "@angular/forms": "~12.2.7",
-    "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "~12.2.7",
-    "@angular/platform-browser-dynamic": "~12.2.7",
-    "@angular/router": "~12.2.7",
-    "@angular/service-worker": "~12.2.7",
+    "@angular/animations": "~13.1.1",
+    "@angular/cdk": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/material": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "@angular/service-worker": "~13.1.1",
     "requirejs": "^2.3.6",
-    "rxjs": "^7.3.0",
+    "rxjs": "^7.5.1",
     "tslib": "^2.3.1",
     "typescript-map": "^0.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
-    "@angular-devkit/core": "^12.2.7",
-    "@angular/cli": "^12.2.7",
-    "@angular/compiler-cli": "~12.2.7",
-    "@angular/pwa": "^12.2.7",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-devkit/core": "~13.1.2",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@angular/pwa": "~13.1.2",
     "@types/jasmine": "^3.9.1",
     "@types/node": "^16.10.1",
     "angular-cli-ghpages": "^1.0.0-rc.2",
